--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 django = ">=4.2,<5.0"
 mysqlclient = ">=2.1.1,<2.2.0"
 pillow = "^9.5.0"
+django-qr-code = "^3.1.1"
 
 
 [build-system]
