--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = ">=4.2,<5.0"
 mysqlclient = ">=2.1.1,<2.2.0"
 pillow = "^9.5.0"
 django-qr-code = "^3.1.1"
+django-bootstrap-v5 = "^1.0.11"
 
 
 [build-system]
