--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ mysqlclient = ">=2.1.1,<2.2.0"
 pillow = "^9.5.0"
 django-bootstrap-v5 = "^1.0.11"
 django-summernote = "^0.8.20.0"
+fontawesomefree = "^6.4.0"
 
 
 [build-system]
