--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pillow = "^9.5.0"
 django-bootstrap-v5 = "^1.0.11"
 django-summernote = "^0.8.20.0"
 fontawesomefree = "^6.4.0"
+django-jazzmin = "^2.6.0"
 
 
 [build-system]
