--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,9 @@ django = ">=4.2,<5.0"
 mysqlclient = ">=2.1.1,<2.2.0"
 pillow = "^9.5.0"
 django-bootstrap-v5 = "^1.0.11"
-django-summernote = "^0.8.20.0"
 fontawesomefree = "^6.4.0"
 django-jazzmin = "^2.6.0"
+django-ckeditor = "^6.5.1"
 
 
 [build-system]
