--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.6.0 ; python_version >= "3.10" and python_version < "4.0"
 beautifulsoup4==4.12.2 ; python_version >= "3.10" and python_version < "4.0"
 django-bootstrap-v5==1.0.11 ; python_version >= "3.10" and python_version < "4.0"
+django-ckeditor==6.5.1 ; python_version >= "3.10" and python_version < "4.0"
+django-jazzmin==2.6.0 ; python_version >= "3.10" and python_version < "4.0"
+django-js-asset==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
 django==4.2 ; python_version >= "3.10" and python_version < "4.0"
+fontawesomefree==6.4.0 ; python_version >= "3.10" and python_version < "4.0"
 mysqlclient==2.1.1 ; python_version >= "3.10" and python_version < "4.0"
 pillow==9.5.0 ; python_version >= "3.10" and python_version < "4.0"
 soupsieve==2.4.1 ; python_version >= "3.10" and python_version < "4.0"
